[package]
name = "dwbhk"
version = "0.1.1"
edition = "2018"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["Discord", "Webhook", "embeds", "file"]
homepage = "https://github.com/TheDutchMC/dwbhk-rs"
description = "dwbhk-rs is a library for working with Discord Webhooks"
categories = ["api-bindings", "asynchronous"]
repository = "https://github.com/TheDutchMC/dwbhk-rs"
resolver = "2"

[dependencies]
lazy_static = "1.4.0"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.4"
features = ["rustls-tls", "json"]

[dev-dependencies.tokio]
version = "1.10.1"
features = ["rt"]

[features]
no-panic = []
blocking = ["reqwest/blocking"]

[dev-dependencies.dwbhk]
path = "."
features = ["blocking"]